--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,5 @@
 @import "./base/generals.scss";
+@import "./components/wrapper.scss";
 @import "./components/index.scss";
-@import "./components/advanced_search.scss"
+@import "./components/advanced_search.scss";
+@import "./components/image_search.scss";
