--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,4 @@
-@import "./base/generals.scss";
+@import "./base/_generals.scss";
 @import "./components/wrapper.scss";
 @import "./components/index.scss";
 @import "./components/advanced_search.scss";
