--- a/scss/components/advanced_search.scss
+++ b/scss/components/advanced_search.scss
@@ -1,11 +1,11 @@
-.adv_navbar {
+@import "../base/variables";
+@import "../base/mixins";
+
+.adv-navbar {
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
+    @include flex (flex, wrap, center, space-between);
     img {
         height: 25px;
         width: 75px;
@@ -19,12 +19,12 @@
         }
     }
 }
-.adv_section {
+.adv-section {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     width: 100%;
-    #h1_cont {
+    #h1-cont {
         border-bottom: 1px solid black;
         margin-bottom: 10px;
         h1 {
@@ -42,9 +42,7 @@
         align-items: start;
         width: 80%;
         div {
-            display: flex;
-            justify-content: left;
-            align-items: center;
+            @include flex (flex, wrap, center, left);
             margin: 0px 5px 0px 20px;
             width: 100%;
             &:last-child {
@@ -53,10 +51,10 @@
             }
             span {
                 font-size: 16px;
-                color: #e8eaed;
+                color: $second-color;
                 margin: 15px 0px;
             };
-            label, #empty_div {
+            label, #empty-div {
                 min-width: 167px;
                 width: 16%;
                 color: #969ba1;
@@ -65,7 +63,7 @@
             }
             input {
                 width: 50%;
-                background: #202124;
+                background: $first-color;
                 border: 1px solid #5f6368;
                 color: #bdc1c6;
                 font-size: 13px;
@@ -73,11 +71,11 @@
                 padding: 1px 8px;
             }
         }
-        #adv_btn {
+        #adv-btn {
             background: #8ab4f8;
             border-color: #8ab4f8;
             border-radius: 5px;
-            color: #202124;
+            color: $first-color;
             font-size: 11px;
             font-weight: bold;
             text-align: center;
