--- a/scss/components/index.scss
+++ b/scss/components/index.scss
@@ -1,4 +1,5 @@
-
+@import "../base/variables";
+@import "../base/mixins";
 
 .navbar{
     width: 100%;
@@ -6,10 +7,8 @@
     margin-bottom: 20px;
     ul {
         list-style: none;
-        display: flex;
-        flex-wrap: wrap;
+        @include flex (flex, wrap, center, right);
         flex-direction: row;
-        justify-content: right;
         margin: 10px;
         li {
             a {
@@ -24,12 +23,9 @@
     }
     
 }
-.main_section {
-    display: flex;
-    flex-wrap: wrap;
+.main-section {
+    @include flex (flex, wrap, center, space-evenly);
     flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
     padding: 10px;
     img {
         height: 92px;
@@ -38,10 +34,8 @@
     }
     form {
         width: 100%;
-        display: flex;
+        @include flex (flex, wrap, center, center);
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
         .search {
             width: 40%;
             border: 1px solid rgb(118, 118, 118);
@@ -49,18 +43,18 @@
             padding: 10px;
             margin: 20px;
             overflow-x: hidden;
-            background-color: #202124;
+            background-color: $first-color;
             font-size: 16px;
             &:hover {
-                border: 2px solid #202124;
-                background-color: #303134;
+                border: 2px solid $first-color;
+                background-color: $third-color;
             }
         }
         div {
             margin: 10px;
             .btn {
-                background-color: #303134;
-                border: 1px solid #303134;
+                background-color: $third-color;
+                border: 1px solid $third-color;
                 border-radius: 4px;
                 font-size: 14px;
                 margin: 11px 4px;
